<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="17dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="63dp"
            android:layout_height="33dp"
            android:text="@string/login"
            android:textAppearance="@style/login"
            android:gravity="center_horizontal|top"
            />

        <EditText
            android:layout_width="match_parent"
            android:hint="Email address"
            android:imeOptions="actionNext"
            android:lines="1"
            android:textColorHint="#C4C4C4"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="#0000"
            android:layout_marginTop="22dp"
            />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line"
            />

        <EditText
            android:layout_width="match_parent"
            android:hint="Password"
            android:imeOptions="actionNext"
            android:lines="1"
            android:textColorHint="#C4C4C4"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="#0000"
            android:layout_marginTop="22dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/line"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/forgot_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your"
                android:textAppearance="@style/forgot_your"
                android:gravity="center_horizontal|top"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:id="@+id/recover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover"
                android:textAppearance="@style/recover"
                android:gravity="center_horizontal|top"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="8dp"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        >
        <TextView
            android:id="@+id/havent_regi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="#24252F"
            android:text="@string/havent_regi"
            android:gravity="center_horizontal|top"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="#0404F5"
            android:onClick="onRegister"
            android:text="Click here to register"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            />
        <TextView android:layout_width="match_parent"
            android:background="@drawable/gradient"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:gravity="center"
            android:textColor="#fff"
            />
    </LinearLayout>

</FrameLayout>