<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#181818"
    tools:context=".ui.activities.Fragment.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:elevation="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Profile"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/notification_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_pic_kols"
            app:civ_border_width="1dp"
            android:padding="2dp"
            android:background="@drawable/badge_background_white"
            app:civ_border_color="@color/colorBtnStart"
            android:layout_marginLeft="26dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/mark_lee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_lee"
                    android:textAppearance="@style/mark_lee"
                    android:gravity="center_horizontal|top"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textAppearance="@style/female"
                    android:gravity="center_horizontal|top"
                    />
                <TextView
                    android:id="@+id/model_actor"
                    android:layout_width="238dp"
                    android:layout_height="32dp"
                    android:text="@string/model_actor"
                    android:textAppearance="@style/model_actor"
                    android:gravity="top"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_gravity="end"
                android:padding="4dp"
                android:layout_marginRight="10dp"
                />

        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        >
        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="1.2K"
            android:layout_gravity="end"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|top"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_youtube"/>
            <TextView
                android:layout_width="48dp"
                android:layout_height="16dp"
                android:text="Youtube"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:layout_marginLeft="4dp"/>

        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/line"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="+ Connect"
            android:layout_gravity="end|center_vertical"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|top"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="7dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_facebook"/>
            <TextView
                android:layout_width="54dp"
                android:layout_height="16dp"
                android:text="Facebook"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:layout_marginLeft="4dp"/>

        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/line"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Connecting..."
            android:layout_gravity="end|center_vertical"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|top"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="7dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_instagram"/>
            <TextView
                android:layout_width="57dp"
                android:layout_height="16dp"
                android:text="Instagram"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_toggle"
            android:background="@drawable/rectangle_3"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Introduction"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_gravity="end|center_vertical"
                android:padding="4dp"
                android:layout_marginRight="10dp"
                />
        </FrameLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/i_mean_you_"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:text="@string/i_mean_you_"
            android:textAppearance="@style/i_mean_you_"
            android:gravity="top"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notification"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            >
            <TextView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:background="@drawable/rectangle_2"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="10"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginRight="29dp"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="end|center_vertical"
                android:padding="4dp"
                android:layout_marginRight="10dp"
                />
        </FrameLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        android:layout_marginTop="5dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textSize="12sp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textColor="#ffffff"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="end|center_vertical"
            android:padding="4dp"
            android:layout_marginRight="10dp"
            />
    </FrameLayout>


</LinearLayout>